Work on network architecture

--- a/scripts/conv1d.ipynb
+++ b/scripts/conv1d.ipynb
@@ -589,9 +589,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tps-env",
+   "display_name": "kaggle-tps-apr2022-env",
    "language": "python",
-   "name": "tps-env"
+   "name": "kaggle-tps-apr2022-env"
   },
   "language_info": {
    "codemirror_mode": {
