--- a/scripts/lstm_copy.ipynb
+++ b/scripts/lstm_copy.ipynb
@@ -534,9 +534,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tps-env",
+   "display_name": "kaggle-tps-apr2022-env",
    "language": "python",
-   "name": "tps-env"
+   "name": "kaggle-tps-apr2022-env"
   },
   "language_info": {
    "codemirror_mode": {
